tm: menu z-index fix

--- a/assets/css/v20Style.less
+++ b/assets/css/v20Style.less
@@ -389,6 +389,7 @@ input {
   .vct-team-wrapper {
     text-align: center;
     position: relative;
+    z-index: 0;
     img.vct-client-logo {
       height: 42px;
       margin-bottom:20px;
